--- a/privatePortfolio/web/src/index.html
+++ b/privatePortfolio/web/src/index.html
@@ -12,6 +12,11 @@
 </head>
 
 <body>
+  <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+    <input type="text"  name="name">
+    <input type="email" name="email">
+    <textarea name="message"></textarea>
+  </form>
   <div id="redwood-app">
     <!-- Please keep the line below for prerender support. -->
     <%= prerenderPlaceholder %>
